adbms8
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ mongosh
Current Mongosh Log ID:	69b90d3b2db5f751b28de665
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
MongoNetworkError: connect ECONNREFUSED 127.0.0.1:27017
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ sudo systemctl start mongod
[sudo] password for mca: 
mca@mca-HP-Pro-Tower-280-G9-E-PCI-Desktop-PC:~$ mongosh
Current Mongosh Log ID:	69b90db84cae9b76598de665
Connecting to:		mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.5.10
Using MongoDB:		8.2.2
Using Mongosh:		2.5.10

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

------
   The server generated these startup warnings when booting
   2026-03-17T13:44:48.069+05:30: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2026-03-17T13:44:48.151+05:30: Access control is not enabled for the database. Read and write access to data and configuration is unrestricted
   2026-03-17T13:44:48.151+05:30: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-03-17T13:44:48.151+05:30: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-03-17T13:44:48.151+05:30: We suggest setting the contents of sysfsFile to 0.
   2026-03-17T13:44:48.151+05:30: We suggest setting swappiness to 0 or 1, as swapping can cause performance problems.
------

test> create database exp8;
Uncaught:
SyntaxError: Missing semicolon. (1:6)

> 1 | create database exp8;
    |       ^
  2 |

test> create database exp8
Uncaught:
SyntaxError: Missing semicolon. (1:6)

> 1 | create database exp8
    |       ^
  2 |

test> use collegeDB;
switched to db collegeDB
collegeDB> db.student.insertMany([
... {rollno:1, name:"Arun", department:"MCA", semester:2, cgpa:8.2},
... {rollno:2, name:"Meera", department:"BCA", semester:4, cgpa:7.5},
... {rollno:3, name:"Rahul", department:"MCA", semester:3, cgpa:8.0},
... {rollno:4, name:"Anjali", department:"BSc", semester:1, cgpa:7.8},
... {rollno:5, name:"Kiran", department:"MCA", semester:2, cgpa:8.5},
... {rollno:6, name:"Sneha", department:"BCom", semester:5, cgpa:7.2},
... {rollno:7, name:"Vijay", department:"MCA", semester:4, cgpa:8.1},
... {rollno:8, name:"Divya", department:"BCA", semester:3, cgpa:7.9},
... {rollno:9, name:"Rohit", department:"MCA", semester:2, cgpa:8.3},
... {rollno:10, name:"Neha", department:"BSc", semester:6, cgpa:7.6}
... ])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId('69b90f914cae9b76598de666'),
    '1': ObjectId('69b90f914cae9b76598de667'),
    '2': ObjectId('69b90f914cae9b76598de668'),
    '3': ObjectId('69b90f914cae9b76598de669'),
    '4': ObjectId('69b90f914cae9b76598de66a'),
    '5': ObjectId('69b90f914cae9b76598de66b'),
    '6': ObjectId('69b90f914cae9b76598de66c'),
    '7': ObjectId('69b90f914cae9b76598de66d'),
    '8': ObjectId('69b90f914cae9b76598de66e'),
    '9': ObjectId('69b90f914cae9b76598de66f')
  }
}
collegeDB> db.student.find({department: "MCA"})
[
  {
    _id: ObjectId('69b90f914cae9b76598de666'),
    rollno: 1,
    name: 'Arun',
    department: 'MCA',
    semester: 2,
    cgpa: 8.2
  },
  {
    _id: ObjectId('69b90f914cae9b76598de668'),
    rollno: 3,
    name: 'Rahul',
    department: 'MCA',
    semester: 3,
    cgpa: 8
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66a'),
    rollno: 5,
    name: 'Kiran',
    department: 'MCA',
    semester: 2,
    cgpa: 8.5
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66c'),
    rollno: 7,
    name: 'Vijay',
    department: 'MCA',
    semester: 4,
    cgpa: 8.1
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66e'),
    rollno: 9,
    name: 'Rohit',
    department: 'MCA',
    semester: 2,
    cgpa: 8.3
  }
]
collegeDB> db.student.updateMany(
...   {department: "MCA"},
...   {$set: {semester: 1}}
... )
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 5,
  modifiedCount: 5,
  upsertedCount: 0
}
collegeDB> db.student.find()
[
  {
    _id: ObjectId('69b90f914cae9b76598de666'),
    rollno: 1,
    name: 'Arun',
    department: 'MCA',
    semester: 1,
    cgpa: 8.2
  },
  {
    _id: ObjectId('69b90f914cae9b76598de667'),
    rollno: 2,
    name: 'Meera',
    department: 'BCA',
    semester: 4,
    cgpa: 7.5
  },
  {
    _id: ObjectId('69b90f914cae9b76598de668'),
    rollno: 3,
    name: 'Rahul',
    department: 'MCA',
    semester: 1,
    cgpa: 8
  },
  {
    _id: ObjectId('69b90f914cae9b76598de669'),
    rollno: 4,
    name: 'Anjali',
    department: 'BSc',
    semester: 1,
    cgpa: 7.8
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66a'),
    rollno: 5,
    name: 'Kiran',
    department: 'MCA',
    semester: 1,
    cgpa: 8.5
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66b'),
    rollno: 6,
    name: 'Sneha',
    department: 'BCom',
    semester: 5,
    cgpa: 7.2
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66c'),
    rollno: 7,
    name: 'Vijay',
    department: 'MCA',
    semester: 1,
    cgpa: 8.1
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66d'),
    rollno: 8,
    name: 'Divya',
    department: 'BCA',
    semester: 3,
    cgpa: 7.9
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66e'),
    rollno: 9,
    name: 'Rohit',
    department: 'MCA',
    semester: 1,
    cgpa: 8.3
  },
  {
    _id: ObjectId('69b90f914cae9b76598de66f'),
    rollno: 10,
    name: 'Neha',
    department: 'BSc',
    semester: 6,
    cgpa: 7.6
  }
]
collegeDB>  
